Replaced file name

--- a/src/components/Solutions.astro
+++ b/src/components/Solutions.astro
@@ -11,7 +11,7 @@ import Container from "./Container.astro"
     </div>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 px-6 md:px-0">
-      <a href="/document-certifier" class="hover:scale-105 hover:shadow-lg transition-transform duration-300">
+      <a href="/dossier-certifier" class="hover:scale-105 hover:shadow-lg transition-transform duration-300">
         <div class="flex flex-col h-full p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
           <div class="flex flex-col gap-1">
             <h6 class="text-lg font-medium text-gray-700 dark:text-white">📂 Dossier Certifier</h6>
