Added white logo for dark mode and blue one for light

--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -17,7 +17,8 @@ const links = [
         <!-- Left: Logo -->
         <div class="absolute left-0 flex items-center">
           <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
-            <img src="/logo.svg" alt="Tisura Logo" class="h-16 w-16" aria-hidden="true">
+            <img src="/logo_white.svg" alt="Tisura Logo" class="h-16 w-16 hidden dark:block" aria-hidden="true">
+            <img src="/logo_blue.svg" alt="Tisura Logo" class="h-16 w-16 block dark:hidden" aria-hidden="true">
           </a>
         </div>
 
